<resources>
    <string name="app_name">Home Learning</string>
    <!-- main activity buttons-->
    <string name="start_erik_spelling">Erik spelling</string>
    <string name="upload_erik_words">Upload Erik words</string>
    <string name="restore_spelling">Restore Spelling</string>
    <string name="start_reading">Reading Words</string>
    <string name="reading_cew">Reading CEW</string>
    <string name="start_irregularVerbs">Irregular Verbs</string>
    <string name="start_homophones">Homophones</string>
    <string name="start_mark_spelling">Mark spelling</string>
    <string name="upload_mark_words">Upload Mark words</string>
    <string name="test_en_to_sp">En To Sp Test</string>
    <string name="test_sp_to_en">Sp To En Test</string>
    <string name="test_rand_spanish">Mixed Test</string>
    <string name="practice_en_to_sp">En To Sp Practice</string>
    <string name="practice_sp_to_en">Sp To En Practice</string>
    <string name="read_spanish_en_to_sp">Read Eng To Sp</string>
    <string name="read_spanish_sp_to_en">Read Sp To Eng</string>
    <string name="spanish_week_words">Spanish Week Words</string>
    <string name="upload_spanish">Upload Spanish Words</string>

    <!-- destination titles-->
    <string name="spelling_title">Spelling</string>
    <string name="reading_title">Reading</string>
    <string name="homophones_title">Homophones</string>
    <string name="verbs_title">Irregular verbs</string>
    <string name="upload_title">Add words</string>
    <string name="spanish_title">Spanish</string>
    <string name="spanish_week_title">Week Words</string>
    <!-- tabs -->
    <string name="tab_Erik">Erik</string>
    <string name="tab_Mark">Mark</string>
    <string name="tab_Zita">Zita</string>
    <string name="tab_Settings">Settings</string>
    <!-- <string name="main_activity_tab3">Admin</string> -->


    <!-- ProgressBar loading messages-->
    <string name="loading">Loading. Ready soon.</string>
    <string name="uploading">Saving. Ready soon.</string>

    <!--Error messages -->
    <string name="error_button_caption">Try again</string>
    <string name="msg_wrong_action">Wrong action provided.</string>
    <string name="msg_no_words">There are no words to display.</string>

    <!--SnackBar messages-->
    <string name="snackBar_error_loading">A problem occurred during loading your data.</string>
    <string name="snackBar_save_success">All done!\nResults were saved successfully.</string>
    <string name="snackBar_save_error">A problem happened while saving the results.</string>
    <string name="snackBar_save_unexpected_error">Unexpected message from server</string>

    <!-- Action Bar Titles-->
    <string name="back_button">Back</string>
    <string name="activity_irregular_verbs">Irregular Verbs</string>
    <string name="activity_homophones">Homophones</string>
    <string name="activity_sentences">Sentences</string>
    <string name="activity_upload_words">Upload Words</string>
    <string name="activity_reading_title">Reading</string>
    <string name="activity_spelling">Spelling</string>
    <string name="reading_black_display">Monochrome display</string>
    <string name="reading_colour_display">Coloured display</string>
    <string name="app_bar_loading_title">Loading...</string>
    <string name="app_bar_uploading_title">Saving...</string>
    <string name="app_bar_error_title">Error</string>
    <string name="spelling_save">Save results</string>
    <string name="spelling_add_new_word">Add new word</string>
    <string name="sentences_check_and_save">Check and save</string>
    <string name="exit_to_menu">Exit to menu</string>
    <string name="spanish_reading_show_translate">Show translate</string>
    <string name="spanish_reading_hide_translate">Hide translate</string>

    <!-- Action Bar Menu-->
    <string name="menu_save">Save</string>
    <string name="menu_close">Close</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_check">Check</string>
    <string name="menu_add_new_word">Add new word</string>
    <string name="menu_redo">New test</string>
    <string name="menu_reload">Reload words</string>

    <!-- Restore From Logs-->
    <string name="confirm_restore_from_log">
        \n Are you sure you want to restore spellings from logs?
        \n It may take few minutes.\n</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">Cancel</string>
    <string name="restore_dialog_title">Restore Spelling</string>

    <!-- Registration-->
    <string name="preferences_user_name">UserName</string>
    <string name="register_set_btn">Register</string>
    <string name="register_name_hint">Username</string>
    <string name="registration_info_text">Set your username</string>
    <string name="registration_error_short">The name has to be at least 3 characters long.</string>
    <string name="registration_error_wrong">The username can contain only letters and numbers.</string>

    <!-- Spelling Words-->
    <string name="loading_data_text">Loading words&#8230;</string>
    <string name="data_saving_text">Saving&#8230;</string>
    <string name="erik_spelling_save">Save</string>
    <string name="spelling_correct">corr.</string>
    <string name="spelling_incorrect">incorr.</string>
    <string name="spelling_correct_short">C</string>
    <string name="spelling_incorrect_short">IC</string>
    <string name="spelling_result">Result: %1$d/%2$d (%3$d\%%)</string>
    <string name="message_after_update_spelling_words">Spelling words results are saved.</string>
    <string name="spelling_save_edited_word">Save word</string>
    <string name="spelling_cancel_editing">Cancel</string>
    <string name="spelling_editing_save_success">Changing word is success.</string>
    <string name="spelling_text_to_speech">Read aloud</string>

    <!-- Upload words -->
    <string name="info_no_words_upload">There are no words to upload.</string>
    <string name="info_words_to_upload">Words to be uploaded</string>
    <string name="info_uploading">Saving words&#8230;</string>
    <string name="upload_saving_words">Saving words</string>
    <string name="upload_add_new">Add new word</string>
    <string name="edit_spelling_word_title">Edit spelling word</string>
    <string name="save_spelling_word_title">Add new spelling word</string>
    <string name="saving_spelling_word_text">Saving word&#8230;</string>
    <string name="message_loading_category">Loading categories&#8230;</string>
    <string name="remove_word_btn_descr">Remove word from the list</string>
    <string name="confirm_remove_upload_word">Are you sure you want to remove the following word?</string>
    <string name="confirm_remove_title">Remove word</string>
    <string name="confirm_remove_ok">Confirm</string>
    <string name="confirm_remove_cancel">Cancel</string>
    <string name="edit_word_btn_descr">Edit</string>
    <string name="saving_words_response">Saving results:\n</string>
    <!--words list heading-->
    <string name="header_upload_words_word">Word</string>
    <string name="header_upload_words_comment">Comment</string>
    <string name="header_upload_words_category">Category</string>
    <!-- upload word-->
    <string name="upload_word_label">Word</string>
    <string name="upload_comment_label">Comment</string>
    <string name="upload_category_label">Category</string>
    <string name="upload_save">Save</string>
    <string name="upload_cancel">Cancel</string>
    <string name="upload_message_invalid_word">Invalid word</string>
    <string name="upload_error_word_message">Please provide valid word!</string>
    <string name="upload_error_comment_message">Please provide a valid comment!</string>
    <string name="upload_error_category_message">Please select a category!</string>
    <string name="upload_delete_word">Delete word</string>
    <string name="upload_edit_word">Edit word</string>
    <string name="upload_no_words_message">There\'s nothing to save. \nPlease create at least one word.</string>
    <!-- upload Spanish word -->
    <string name="upload_spanish_word_en_label">English Word</string>
    <string name="upload_spanish_word_sp_label">Spanish Word</string>


    <!-- Fill In Sentences Activity -->
    <string name="irregular_verb_dialog_title">Unable to check</string>
    <string name="irregular_verb_not_all_filled_message">Please answer all the questions!</string>
    <string name="irregular_verb_result">Result: %1$d/%2$d (%3$d\%%) </string>
    <string name="irregular_verb_instruction">Fill the empty spaces!</string>
    <string name="irregular_checking_text">Checking the answers&#8230;</string>
    <string name="sentences_message_after_update">Results are saved.</string>
    <string name="sentences_result_correct">Correct</string>
    <string name="sentences_result_incorrect">Incorrect</string>
    <string name="confirm_save_sentence">Are you sure you want to save your answers?</string>
    <string name="confirm_save_title">Save answers</string>
    <string name="confirm_save_ok">Confirm</string>
    <string name="confirm_save_cancel">Cancel</string>

    <!-- Irregular Verbs words / Spelling / Reading words -->
    <string name="loading_fail_text">Loading words failed.</string>

    <!-- Reading words -->
    <string name="msg_turn_landscape_mode">Please turn your device into landscape mode.</string>


    <!-- other-->
    <string name="ok">OK</string>

    <!--Reading -->
    <string name="reading_counter">%1$d/%2$d</string>

    <!--Spanish -->
    <string name="answer">Answer:</string>
    <string name="result_correct">Correct</string>
    <string name="result_incorrect">Incorrect</string>
    <string name="correct_answer">The correct answer: %1$s</string>

    <!-- scriptId and sheetId settings -->
    <string name="settings_sheet_id">Sheet Id</string>
    <string name="settings_script_id">Script Id</string>
    <string name="settings_restore_defaults">Restore defaults</string>
    <string name="settings_loading">Loading settings…</string>
    <string name="settings_saving">Saving…</string>
    <string name="settings_load_failed">Loading settings failed.</string>
    <string name="settings_save_failed">Saving settings failed.</string>
    <string name="settings_copy">Copy</string>
    <string name="settings_copied">Copied</string>
    <string name="settings_paste">Paste</string>
    <string name="settings_pasted">Pasted</string>
    <string name="settings_clipboard_empty">Clipboard is empty</string>
</resources>