<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.ErikTabFragment">


    <LinearLayout
        android:id="@+id/main_buttonHolder1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:animateLayoutChanges="false"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_startSpelling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:enabled="true"
            android:text="@string/start_erik_spelling" />

        <Button
            android:id="@+id/btn_startIrregular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/start_irregularVerbs" />

        <Button
            android:id="@+id/btn_startHomophones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/start_homophones" />

        <Button
            android:id="@+id/btn_addSpellingWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:enabled="true"
            android:text="@string/upload_erik_words" />

    </LinearLayout>
</FrameLayout>